--- a/public/welcome.css
+++ b/public/welcome.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background-color: #2e0c57;
+  background-color: #a990ca;
   color: white;
 }
 
